sreeshanth(translation changes )
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@948 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/app/views/employee/_additional_fields.erb
+++ b/app/views/employee/_additional_fields.erb
@@ -24,7 +24,7 @@
       <li class="list<%=cycle('odd', 'even')%>">
         <div class="category-name"><%= c.name %></div>
         <div class="category-edit"><%= link_to "#{t('edit_text')}", {:action => "edit_additional_details", :id=>c.id} %></div>
-        <div class="category-edit"><%= link_to  "#{t('delete_text')}", {:action => "delete_additional_details", :id=>c.id}, :confirm => "#{t('.delete_confirm_msg')}" %></div>
+        <div class="category-edit"><%= link_to  "#{t('delete_text')}", {:action => "delete_additional_details", :id=>c.id}, :confirm => "#{t('delete_confirm_msg')}" %></div>
       </li>
      <% end %>
     <% unless @inactive_additional_details.empty? %>
