--- a/app/views/employee/_attendance_report.erb
+++ b/app/views/employee/_attendance_report.erb
@@ -31,7 +31,7 @@
       <div class="date-even"><%= t('no_dates_found') %></div>
     <% else %>
       <% @report.each do |r| %>
-        <div class="date-<%=cycle("even", "odd")%>"><%= I18n(r.attendance_date,:forma=>"%B %d, %Y") %>
+        <div class="date-<%=cycle("even", "odd")%>"><%= I18n.l(r.attendance_date,:forma=>"%B %d, %Y") %>
           <% if r.is_half_day==true %>
            <%= t('half_day') %>
           <% end %>
