--- a/app/views/employee/advanced_search.html.erb
+++ b/app/views/employee/advanced_search.html.erb
@@ -62,7 +62,7 @@
       <div class="label-field-pair">
         <label for="student_admission_no"><%= t('marital_status') %></label>
         <div class="text-input-bg">
-          <%= select :search, :marital_status_like, ["#{t('single')}", "#{t('married')}", "#{t('divorced')}"],{:prompt=>"#{t('select')}"}%>
+          <%= select :search, :marital_status_like, [["#{t('single')}","single"], ["#{t('married')}","married"],["#{t('divorced')}","divorced"]],{:prompt=>"#{t('select')}"}%>
         </div>
       </div>
       <div class="label-field-pair">
@@ -105,7 +105,7 @@
             :style =>"display: none;" ) %>
         </label>
         <div class="text-input-bg">
-          <%= select :adv_search,:doj_option,["#{t('equal_to')}","#{t('less_than')}","#{t('greater_than')}"],{:prompt=>"#{t('choose_your_option')}"},
+          <%= select :adv_search,:doj_option,[["#{t('equal_to')}","equal_to"],["#{t('less_than')}","less_than"],["#{t('greater_than')}","greater_than"]],{:prompt=>"#{t('choose_your_option')}"},
             {:onChange => "#{remote_function(:url => {:action => "list_doj_year"},
             :with=>"'doj_option='+value",
             :before => "Element.show('loader')",
@@ -127,7 +127,7 @@
             :style =>"display: none;" ) %>
         </label>
         <div class="text-input-bg">
-          <%= select :adv_search,:dob_option,["#{t('equal_to')}","#{t('less_than')}","#{t('greater_than')}"],{:prompt=>"#{t('choose_your_option')}"},
+          <%= select :adv_search,:dob_option,[["#{t('equal_to')}","equal_to"],["#{t('less_than')}","less_than"],["#{t('greater_than')}","greater_than"]],{:prompt=>"#{t('choose_your_option')}"},
             {:onChange => "#{remote_function(:url => {:action => "list_dob_year"},
             :with=>"'dob_option='+value",
             :before => "Element.show('loader')",
