--- a/app/views/employee/admission1.erb
+++ b/app/views/employee/admission1.erb
@@ -153,7 +153,7 @@
       <hr class="sub-heading"></hr>
       <div class="label-field-pair">
         <label for="employee_martial_status"><%= t('marital_status') %></label>
-        <div class="text-input-bg"><%= select :employee, :marital_status, ["#{t('single')}", "#{t('married')}","#{t('divorced')}"] %></div>
+        <div class="text-input-bg"><%= select :employee, :marital_status, [["#{t('single')}","single"], ["#{t('married')}","married"],["#{t('divorced')}","divorced"]] %></div>
       </div>
       <hr class="label-underline"></hr>
       <div class="label-field-pair">
