--- a/app/views/employee/edit_personal.erb
+++ b/app/views/employee/edit_personal.erb
@@ -55,7 +55,7 @@
 
           <div class="label-field-pair">
             <label><%= t('marital_status') %></label>
-            <div class="text-input-bg"><%= select :employee, :marital_status, ["#{t('single')}", "#{t('married')}"] %></div>
+            <div class="text-input-bg"><%= select :employee, :marital_status, [["#{t('single')}","single"], ["#{t('married')}","married"]] %></div>
             <div class="extender"></div>
           </div>
 
@@ -95,7 +95,7 @@
 
           <div class="label-field-pair">
             <label><%= t('blood_group') %></label>
-            <div class="text-input-bg"><%= select :employee, :blood_group, ["Unknown","A+", "A-", "B+", "B-", "O+", "O-", "AB+", "AB-"] %></div>
+            <div class="text-input-bg"><%= select :employee, :blood_group, [["#{t('unknown')}","Unknown"],"A+", "A-", "B+", "B-", "O+", "O-", "AB+", "AB-"] %></div>
             <div class="extender"></div>
           </div>
 
