--- a/app/views/employee/profile.erb
+++ b/app/views/employee/profile.erb
@@ -104,7 +104,7 @@
       </li>
     <% end %>
     <li>
-      <a href="#" class="drops" id="link_four">More &#9660;</a>
+      <a href="#" class="drops" id="link_four"><%= t('more') %>&#9660;</a>
           <ul id="box_four" class="scriptaculously" style="display:none;">
         <% FedenaPlugin::ADDITIONAL_LINKS[:employee_profile_more_menu].each do |mod| %>
           <li><%= link_to "#{t(mod[:title])}",mod[:destination].merge(:id=>@employee.id) %></li>
