--- a/app/views/finance/_add_particulars_create_form.html.erb
+++ b/app/views/finance/_add_particulars_create_form.html.erb
@@ -14,7 +14,7 @@
 #KIND, either express or implied.  See the License for the
 #specific language governing permissions and limitations
 #under the License. -%>
-<label class="head_label"><%= t('add') %> <%= t('particulars') %> <%= t('for') %> <%= t('additional') %> <%= t('fees') %><span></span></label>
+<label class="head_label"><%= t('add') %> <%= t('particulars') %> <%= t('for') %> <%= t('additional') %> <%= t('fees_text') %><span></span></label>
 
 <% form_remote_for :finance_fee_particulars, :url => {:action => 'add_particulars_create',:id => @collection_date.id} do |form| %>
   <div id="form-errors"></div>
@@ -29,11 +29,11 @@
 <div class="label-field-pair2">
   <div class="label-container2"><label><%= t('particulars') %> :</label></div>
     <div class="input-container2">
-      <div class="opt"><%= radio_button("#{t('particulars')}","#{t('select')}","#{t('all')}",:checked => true) %><%= t('all') %></div>
-     <div class="opt"><%= radio_button("#{t('particulars')}","#{t('select')}","#{t('student_text')}",
+      <div class="opt"><%= radio_button("particulars","select","all",:checked => true) %><%= t('all') %></div>
+     <div class="opt"><%= radio_button("particulars","select'","student",
       {:onchange => "#{remote_function(:url => {:action => "student_or_student_category"},
         :with => "'select_value='+value")}"}) %> <%= t('admission_number') %> </div>
-      <div class="opt"> <%= radio_button("#{t('particulars')}","#{t('select')}","#{t('category')}",
+      <div class="opt"> <%= radio_button("particulars","select","category",
       {:onchange => "#{remote_function(:url => {:action => "student_or_student_category"},
         :with => "'select_value='+value")}"}) %><%= t('student_category') %></div>
     </div>
