--- a/app/views/finance/_fees_particulars_list.html.erb
+++ b/app/views/finance/_fees_particulars_list.html.erb
@@ -47,7 +47,7 @@
         <td class="col-3"><%= I18n.l(fees.created_at,:format=>"%d-%m-%Y") %></td>
         <td class="col-1">
           <%  unless @additional_category.check_fee_collection_for_additional_fees == false %>
-            <span class="small"> <%= link_to_remote t('delete_text'),:confirm=>"#{t('')}", :url => { :action => 'add_particulars_delete',:id => fees.id} %></span>
+            <span class="small"> <%= link_to_remote t('delete_text'),:confirm=>"#{t('delete_confirm_msg')}", :url => { :action => 'add_particulars_delete',:id => fees.id} %></span>
           <% else %>
             <span class="small-strike"><%= t('delete_text') %></span>
           <% end %>
