--- a/app/views/finance/fees_student_search.html.erb
+++ b/app/views/finance/fees_student_search.html.erb
@@ -34,7 +34,7 @@
   <div id="search_box_bg">
       <form name="search_form" action="" style="display:inline;">
         <label for="user_name">
-          <%= t('search') %>
+          <%= t('search_texts') %>
           <%= image_tag("loader.gif",
               :align => "absmiddle",
               :border => 0,
