--- a/app/views/finance/income_list_update.erb
+++ b/app/views/finance/income_list_update.erb
@@ -47,7 +47,7 @@
           <td class="col-3"><%= d.description %></td>
           <td class="col-3"><%= d.amount %></td>
           <td class="col-3"><%= d.transaction_date.strftime("%d-%m-%y") unless d.transaction_date.nil?%></td>
-          <td class="col-3"><small><%= link_to "#{t('edit_text')}",:action=>'income_edit',:id=>d.id %></small> | <small><%= link_to "#{t('delete')}",:action=>'delete_transaction',:id=>d.id %></small></td>
+          <td class="col-3"><small><%= link_to "#{t('edit_text')}",:action=>'income_edit',:id=>d.id %></small> | <small><%= link_to "#{t('delete_text')}",:action=>'delete_transaction',:id=>d.id %></small></td>
         </tr>
       <% end %>
 
