--- a/app/views/student/advanced_search_pdf.html.erb
+++ b/app/views/student/advanced_search_pdf.html.erb
@@ -23,18 +23,18 @@
 <% @students.in_groups_of(25,false).each do |students| %>
   <div class="page">
     <div class="hor_line"></div>
-    <h2>Student-Advanced search</h2>
+    <h2><%= t('student_text') %>-<%= t('advanced_search_text') %></h2>
     <div class="hor_line"></div>
 
     <div class="extender"> </div>
 
     <div id ="main_info">
-      <h4> <%= "Students Listed by "+@searched_for.downcase %></h4>
+      <h4> <%= "#{t('students')} #{t('listed_by')}"+@searched_for.downcase %></h4>
     </div>
     <div class="report">
       <table id="pdf-table" width="100%" cellspacing="0">
         <% c= 'odd' %>
-        <tr class="table-header"><td class="col-pdf">Sl no.</td><td class="col-pdf">Name</td><td class="col-pdf"> Batch</td><td class="col-pdf">Ad. No.</td><td class="col-pdf">Date Of Birth</td></tr>
+        <tr class="table-header"><td class="col-pdf"><%= t('sl_no') %></td><td class="col-pdf"><%= t('name') %></td><td class="col-pdf"><%= t('batch') %></td><td class="col-pdf"><%= t('adm_no') %></td><td class="col-pdf"><%= t('date_of_birth') %></td></tr>
         <% students.each.each_with_index do |student,i| %>
           <tr class="<%= cycle((["odd","even"]-[c]).first,c) %>">
             <td class="col-pdf"><%= index+=1 %></td>
