--- a/app/views/archived_student/reports.erb
+++ b/app/views/archived_student/reports.erb
@@ -55,8 +55,8 @@
       <h4><%= t('detailed_report') %></h4>
       <ul>
         <% unless @grouped_exams.empty? %>
-        <li><%= link_to "#{t('final_report')}(#{t('student.exam_goruped')})",{ :action=>'generated_report4',:student=>@student.id,:type=>'grouped'} %></li>
-        <li><%= link_to "#{t('compare_past')}(#{t('student.exam_goruped')})", {  :action => 'previous_years_marks_overview',:student=>@student.id,:type=>'grouped' } %></li>
+        <li><%= link_to "#{t('final_report')}(#{t('exam_goruped')})",{ :action=>'generated_report4',:student=>@student.id,:type=>'grouped'} %></li>
+        <li><%= link_to "#{t('compare_past')}(#{t('exam_goruped')})", {  :action => 'previous_years_marks_overview',:student=>@student.id,:type=>'grouped' } %></li>
         <% else %>
         <li><%= link_to "#{t('final_report')}",{ :action=>'generated_report4',:student=>@student.id,:type=>'general'} %></li>
         <li><%= link_to "#{t('compare_past')}", {  :action => 'previous_years_marks_overview',:student=>@student.id,:type=>'general' } %></li>
