--- a/app/views/exams/new.html.erb
+++ b/app/views/exams/new.html.erb
@@ -39,7 +39,7 @@
       <%= link_to "#{t('batch')} #{@batch.name}", [@course, @batch] %> &raquo;
       <%= link_to "#{t('exams_text')}", batch_exam_groups_path(@batch) %> &raquo;
       <%= link_to @exam_group.name, [@batch, @exam_group] %> &raquo;
-       <%= t('new') %>
+       <%= t('new_text') %>
     </div>
 
     <h5><%= t('for_exam_group') %>- <%= @exam_group.name %></h5>
