--- a/app/views/archived_student/profile.erb
+++ b/app/views/archived_student/profile.erb
@@ -62,7 +62,7 @@
     <div id ="student_main_info">
       <h3> <%= @archived_student.full_name %>  </h3>
       <h4> <%= t('course_and_batch') %> : <%= @archived_student.batch.course_name %> </h4>
-      <h4> <%= t('adm_no') %>. : <%= @archived_student.admission_no %> </h4>
+      <h4> <%= t('adm_no') %>: <%= @archived_student.admission_no %> </h4>
     </div>
 
     <div class="extender"> </div>
@@ -72,8 +72,8 @@
   <div id="new_profile_info_top">
     <div class="profile_top_banner"><%= image_tag "master_student/profile/topbanner.png" %></div>
     <table width="700">
-      <tr class="odd left"><td><%= t('admission_date') %></td><td class="right"><%= @archived_student.admission_date.strftime("%d %b, %Y") unless @archived_student.admission_date.nil? %></td></tr>
-      <tr class="even left"><td><%= t('date_of_birth') %></td><td class="right"><%= @archived_student.date_of_birth.strftime("%d %b, %Y") unless @archived_student.date_of_birth.nil? %></td></tr>
+      <tr class="odd left"><td><%= t('admission_date') %></td><td class="right"><%= I18n.l(@archived_student.admission_date,:format=>"%d %b, %Y") unless @archived_student.admission_date.nil? %></td></tr>
+      <tr class="even left"><td><%= t('date_of_birth') %></td><td class="right"><%= I18n.l(@archived_student.date_of_birth,:format=>"%d %b, %Y") unless @archived_student.date_of_birth.nil? %></td></tr>
       <tr class="odd left"><td><%= t('blood_group') %></td><td class="right"><%= @archived_student.blood_group %></td></tr>
       <tr class="even left"><td><%= t('gender') %></td><td class="right"><%= @archived_student.gender_as_text %></td></tr>
       <tr class="odd left"><td><%= t('nationality') %></td><td class="right"><%= @archived_student.nationality.name unless @archived_student.nationality_id.nil? %></td></tr>
