--- a/app/views/attendance_reports/_mode.html.erb
+++ b/app/views/attendance_reports/_mode.html.erb
@@ -22,7 +22,7 @@
  
 <div class="text-input-bg">
 <%= select :mode, :id,
-  ["#{t('monthly')}", "#{t('overall')}"],
+  [["#{t('monthly')}","Monthly"], ["#{t('overall')}","Overall"]],
   {:prompt => "#{t('select_mode')}"},
   {:onchange => "#{remote_function(
   :url => { :action => 'show' },
