--- a/app/views/attendance_reports/advance_search.html.erb
+++ b/app/views/attendance_reports/advance_search.html.erb
@@ -21,7 +21,7 @@
 <%= f.text_field :student%>
 <%= f.text_field :student_id %>
 <%= f.select :mode, :id,
-  ["#{t('monthly')}", "#{t('overall')}"],
+  [["#{t('monthly')}","Monthly"], ["#{t('overall')}","Overall"]],
   {:prompt => "#{t('select_mode')}"},
   {:onchange => "#{remote_function(
   :url => { :action => 'month' },
