--- a/app/views/employee/edit1.erb
+++ b/app/views/employee/edit1.erb
@@ -61,7 +61,7 @@
 
       <div class="label-field-pair">
         <label for="employee_joining_date"><%= t('joining_date') %></label>
-        <div class="text-input-bg"><%= calendar_date_select_tag 'employee[joining_date]', I18n.l(@employee.joining_date,:format=>:default),
+        <div class="text-input-bg"><%= calendar_date_select_tag 'employee[joining_date]', I18n.l(@employee.joining_date,:format=>:normal),
             :year_range => 25.years.ago..0.years.from_now %></div>
       </div>
       <hr class="label-underline"></hr>
