--- a/app/views/event/show.erb
+++ b/app/views/event/show.erb
@@ -120,9 +120,9 @@
       <% end %>
 
     <% unless @command == 'edit' %>
-    <%= link_to "► #{t('confirm')}",{ :action=>"confirm_event",:id=>@event.id}, :class=> 'create'%>  <%= link_to "► Cancel", { :action=>"cancel_event" , :id=>@event.id },  :class=> 'create' %>
+    <%= link_to "► #{t('confirm')}",{ :action=>"confirm_event",:id=>@event.id}, :class=> 'create'%>  <%= link_to "► #{t('cancel')}", { :action=>"cancel_event" , :id=>@event.id },  :class=> 'create' %>
     <% else %>
-    <%= link_to "► #{t('confirm')}",{ :action=>"confirm_event",:id=>@event.id}, :class=> 'create'%>  <%= link_to "► Cancel", { :action=>"edit_event" , :id=>@event.id },  :class=> 'create' %>
+    <%= link_to "► #{t('confirm')}",{ :action=>"confirm_event",:id=>@event.id}, :class=> 'create'%>  <%= link_to "►  #{t('cancel')}", { :action=>"edit_event" , :id=>@event.id },  :class=> 'create' %>
     <% end %>
     </div>
 </div>
