--- a/app/views/exam/enter_result.html.erb
+++ b/app/views/exam/enter_result.html.erb
@@ -38,7 +38,7 @@
       <div class="text-input-bg">
         <%= select :courses, :name,
           Course.active.map {|b| [b.course_name, b.id]},
-          {:prompt => 'Select a course'},
+          {:prompt => "#{t('select_a_course')}"},
           {:onChange => "#{remote_function(:url => {:action => "update_batch_ex_result"},
           :with => "'course_name='+ value",
           :before => "Element.show('loader')",
