--- a/app/views/exams/show.html.erb
+++ b/app/views/exams/show.html.erb
@@ -72,7 +72,7 @@
             <% else %>
               <td class="col-2"><div class="label-field-pair">
                   <div class="text-input-bg"><%= select "exam[#{student.id}]", "grading_level_id", @grades.map {|g| [g.name, g.id] },
-                      { :prompt =>"Select Grade", :selected => @exam_score.grading_level_id } %></div></div></td>
+                      { :prompt =>"#{t('select_grade')}", :selected => @exam_score.grading_level_id } %></div></div></td>
             <% end %>
 
             <td class="col-2"><div class="label-field-pair2">
