--- a/app/views/student_attendance/student.html.erb
+++ b/app/views/student_attendance/student.html.erb
@@ -56,7 +56,7 @@
       </label>
       <div class="text-input-bg">
         <%= f.select :mode,
-          ["#{t('monthly')}", "#{t('overall')}"],
+          [["#{t('monthly')}","Monthly"], ["#{t('overall')}","Overall"]],
           {:prompt => "#{t('select_mode')}"},
           {:onchange => "#{remote_function(
           :url => { :action => 'month' },
