--- a/app/views/user/dashboard.erb
+++ b/app/views/user/dashboard.erb
@@ -46,7 +46,7 @@
     </div>
     <div class="button-box">
       <%= link_to "<div class ='button-label'><p>#{t('examinations')}</p></div>", {:controller => "exam", :action => "index"},
-        :class => "option_buttons", :id => "examinations_button",:title => "          Manage Examinations" %>
+        :class => "option_buttons", :id => "examinations_button",:title => "#{t('manage_examinations')}" %>
     </div>
     <div class="button-box">
       <%= link_to "<div class ='button-label'><p>#{t('timetable_text')}</p></div>", {:controller => "timetable", :action => "index"},
@@ -106,7 +106,7 @@
     </div>
     <div class="button-box">
       <%= link_to "<div class ='button-label'><p>#{t('academics')}</p></div>", {:controller => "student", :action => "reports",:id => @student.id},
-        :class => "option_buttons", :id => "academic_button",:title => "         #{t('academic_report')}   "  %>
+        :class => "option_buttons", :id => "academic_button",:title => "         #{t('academic_reports')}   "  %>
     </div>
   <% else %>
 
