--- a/app/views/user/search_user_ajax.erb
+++ b/app/views/user/search_user_ajax.erb
@@ -45,7 +45,7 @@
         <% else %>
 
           <tr class="tr-<%= cycle('odd', 'even') %>">
-            <td class="col-2"><%= t('no_user_found') %></td>
+            <td class="col-2"><%= t('no_users') %></td>
           </tr>
         <% end %>
       </table>
