sreeshanth(translation changes)
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@955 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/app/views/finance/batch_fees_report.html.erb
+++ b/app/views/finance/batch_fees_report.html.erb
@@ -29,7 +29,7 @@
 <div id="page-yield">
   <% total =0 %>
 
-  <b style="margin-left:200px;"><%= @batch.full_name%>  <%= t('transacation_report') %> </b>
+  <b style="margin-left:200px;"><%= @batch.full_name%>  <%= t('transaction_report') %> </b>
   <div id="fees-table">
     <div class="fees-th">
       <div class="fees-table-description"><p> <%= t('student_name') %> </p></div>
