--- a/app/views/additional_exam_groups/index.html.erb
+++ b/app/views/additional_exam_groups/index.html.erb
@@ -20,7 +20,7 @@
 <div id="content-header">
   <img src="/images/examination/show_exam.png" alt="Exam" />
   <h1><%= t('additional_exams_text') %></h1>
-  <h3><%= t('additional_exam_groups') %></h3>
+  <h3><%= t('additional_exam_groups_text') %></h3>
   <div id="app-back-button">
     <%= link_to_function image_tag("/images/buttons/back.png",:border => 0), "history.back()" %>
   </div>
