--- a/app/views/employee/department_payslip.html.erb
+++ b/app/views/employee/department_payslip.html.erb
@@ -57,7 +57,7 @@
         <table id="listing" width="100%">
           <tr class="tr-head">
             <td><%= t('sl_no') %></td>
-            <td><%= t('employee') %></td>
+            <td><%= t('employee_text') %></td>
             <td><%= t('employee_no') %></td>
             <td><%= t('net_salary') %></td>
             <td><%= t('payslip_status') %></td>
