added is_paid field to finance_fees table
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@957 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/app/views/finance/_student_defaulters.html.erb
+++ b/app/views/finance/_student_defaulters.html.erb
@@ -29,7 +29,7 @@
       <td></td>
     </tr>
     <%@defaulters.each_with_index do |s,i| %>
-      <%if s.check_fees_paid(@date) == false %>
+      <%if s.check_fee_pay(@date) == false %>
         <tr class="tr-<%= cycle('odd', 'even')%>">
           <td class="col-5"><%= i+1 %></td>
           <td class="col-1"><%= s.admission_no %></td>
