fixed style issue attendance registers
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@960 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/public/stylesheets/attendances/index.css
+++ b/public/stylesheets/attendances/index.css
@@ -80,6 +80,7 @@ table#attendance{
 }
 .tr-head{
     color:#990A10;
+    height: 40px;
 }
 .td-mark{
     width:20px;
@@ -146,12 +147,12 @@ table.table{
 .td-mark .date{
     position: relative;
     left: -172px;
-    top: -82px;
+    top: -73px;
 }
 .td-name .date{
     position: relative;
     left: -77px;
-    top: -82px;
+    top: -73px;
 }
 .td-mark .date span,.td-name .date span{
     display: none;
